# jple

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data/raw/: RRMs_3D_hmm_extended.hmm  hmm_acc.txt  rnacompete_metadata_eupri.tsv
jple/: __init__.py  cli.py  io_utils.py  model.py  parser.py  rep_utils.py  run_jple.py
notebooks/: preprocess_data.ipynb
test/data/: seq_test.fasta  zscore_test.tsv
test/output_na/RNCMPT00001/: dist.txt  importance.tsv
test/output_na/RNCMPT00002/: dist.txt  importance.tsv
test/output_na/RNCMPT00003/: dist.txt  importance.tsv
test/output_na/RNCMPT00004/: dist.txt  importance.tsv
test/output_protein/ENSP00000274849/: dist.txt  domain.tsv  iupac.txt  neighbor.tsv  pwm.txt  zscore.tsv
test/output_protein/ENSP00000295971/: dist.txt  domain.tsv  iupac.txt  neighbor.tsv  pwm.txt  zscore.tsv
test/output_protein/ENSP00000480040/: dist.txt  domain.tsv  iupac.txt  neighbor.tsv  pwm.txt  zscore.tsv
