[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'jple'
version = '1.0.0'
dependencies = [
    'logomaker==0.8.7',
    'matplotlib',
    'numpy==1.24.4',
    'pandas==2.0.3',
    'pyhmmer==0.11.1',
    'scipy==1.10.1',
]
requires-python = '>=3.8'
description = 'Run Joint Protein-Ligand Embedding (JPLE).'
readme = 'README.md'
license = {file = 'LICENSE'}
keywords = ['bioinformatics', 'motif', 'tf', 'rbp', 'protein', 'rna', 'dna',
            'rnacompete', 'eupri']
classifiers = [
    'Programming Language :: Python :: 3',
]

[project.urls]
Repository = 'https://github.com/morrislab/jple.git'
Repository_original = 'https://github.com/LXsasse/RBPbinding'
Publication = 'https://www.nature.com/articles/s41587-025-02733-6'

[project.scripts]
jple = 'jple.cli:main_cli'

[tool.setuptools]
packages = ['jple']