[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'jple'
version = '1.0.0'
dependencies = [
    'logomaker==0.8.*',
    'matplotlib==3.*',
    'pandas==2.*',
    'pyhmmer==0.11.*',
    'scipy==1.10.*; python_version<"3.11"',
    'scipy==1.16.*; python_version>="3.11"',
    'numpy==1.24.*; python_version<"3.11"',
    'numpy==2.3.*; python_version>="3.11"',
]
requires-python = '>=3.8'
description = 'Run Joint Protein-Ligand Embedding (JPLE).'
readme = 'README.md'
license = {file = 'LICENSE'}
keywords = ['bioinformatics', 'motif', 'tf', 'rbp', 'protein', 'rna', 'dna',
            'rnacompete', 'eupri']
classifiers = [
    'Programming Language :: Python :: 3',
]

[project.urls]
Repository = 'https://github.com/morrislab/jple.git'
Repository_original = 'https://github.com/LXsasse/RBPbinding'
Publication = 'https://www.nature.com/articles/s41587-025-02733-6'

[project.scripts]
jple = 'jple.cli:main_cli'

[tool.setuptools]
packages = ['jple']

[tool.tox]
requires = ["tox>=4"]
env_list = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
commands = [["jple", "--help"]]
